# by-framework-python

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README_zh.md  SECURITY.md  autoformat.sh  pylintrc  pyproject.toml
.codex/: hooks.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy-smoke-test.yml  publish.yml  stale.yml  verify.yml
deploy/: Dockerfile  docker-compose.yml  entrypoint.sh
deploy/kubernetes/: worker-deployment.yaml
docs/: worker_management.html
docs/architecture/: GUARD_AUTHORING.md  KEY_FILES.md  production-deployment.md  redis-cluster-mode.md  worker-readiness-endpoint.md
examples/: echo_worker.py  send_and_verify.py
libs/by-framework-adk/: README.md  pyproject.toml
libs/by-framework-dashboard/: pyproject.toml
libs/by-framework-history-byclaw/: README.md  pyproject.toml
libs/by-framework-history-postgres/: README.md  pyproject.toml
libs/by-framework-langgraph/: README.md  pyproject.toml
libs/by-framework-trace-langfuse/: README.md  pyproject.toml
libs/by-framework-trace-phoenix/: README.md  pyproject.toml
scripts/: .map.conf  check-doc-discipline.sh  check-entry-freshness.sh  check-map-territory.sh  map-stop-hook.sh  python_quality.sh  test-growth-ladder.sh  verify.sh
src/by_framework/: __init__.py  __main__.py
src/byclaw_gateway_sdk/: __init__.py  __main__.py
tests/: conftest.py  test_main.py
tests/admin/: test_cli.py
tests/client/: test_client.py
tests/common/: test_config.py  test_constants.py  test_exceptions.py  test_logger.py  test_redis_client.py
tests/core/: test_agent_config_audit.py  test_discovery.py  (+2 more)
(+207 files in other folders)
